# general_ledger

./: .buildinfo  .env  .gitignore  MANIFEST.in  NOTES.md  README.md  general_ledger.html  genindex.html  index.html  installation.html  intro.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: django.yml  sphinx.yml
_sources/: index.rst.txt  intro.rst.txt
dashboard/: apps.py  asgi.py  dynamic_preferences_registry.py  jinja2.py  registries.py  settings.py  urls.py  wsgi.py
dashboard/forms/: book_preferences.py
dashboard/migrations/: 0001_initial.py
dashboard/models/: __init__.py  book_preferences.py
dashboard/templates/: 404.j2
docs/: requirements.txt
docs/source/: conf.py  general_ledger.rst  index.rst  installation.rst
general_ledger/: __init__.py  apps.py  constants.py  middleware.py  signals.py  sql_formatter.py  urls.py  urls_api.py  utils.py
general_ledger/admin/: __init__.py  account.py  account_type.py  bank.py  bank_balance.py  bank_statement_line.py  book.py  coa.py  contact.py  file_upload.py  invoice.py  ledger.py  payment.py  payment_item.py  payment_transaction.py  tax_rate.py  tax_type.py  transaction.py  xero_gl_import.py
general_ledger/builders/: __init__.py  balance_sheet.py  book.py  income_statement.py  invoice.py  invoice_builder.py  payment.py  transaction.py
general_ledger/factories/: __init__.py  account.py  account_factory.py  bank_account.py  (+9 more)
notebooks/: django_initializer.py  notebook.ipynb  tutorial-1.ipynb
(+434 files in other folders)
